SDM845: Implement a configpanel to turn on/off flicker-free
Change-Id: I29dab8c69ae632567473050570c92770c7d69151

--- a/configpanel/res/values/strings.xml
+++ b/configpanel/res/values/strings.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <!--
-     Copyright (C) 2018 The LineageOS Project
+     Copyright (C) 2019 The MoKee Open Source Project
 
      Licensed under the Apache License, Version 2.0 (the "License");
      you may not use this file except in compliance with the License.
@@ -14,7 +14,12 @@
      See the License for the specific language governing permissions and
      limitations under the License.
 -->
-<manifest xmlns:android="http://schemas.android.com/apk/res/android"
-          android:sharedUserId="android.uid.system"
-          package="org.mokee.settings.device">
-</manifest>
+<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
+
+    <!-- Flicker-free -->
+    <string name="flicker_free_settings_title">Flicker-free</string>
+    <string name="flicker_free_settings_summary">Avoid screen flicker on low brightness</string>
+    <string name="flicker_free_toggle_title">Avoid screen flicker on low brightness</string>
+    <string name="flicker_free_toggle_summary">May reduce image quality</string>
+
+</resources>
